--- a/app/src/main/res/layout/activity_create_recipes_wip.xml
+++ b/app/src/main/res/layout/activity_create_recipes_wip.xml
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/white" />
+        app:titleTextColor="#ffffff" />
 
     <View
         android:id="@+id/divider"
