--- a/app/src/main/res/layout/dialog_ing_sel.xml
+++ b/app/src/main/res/layout/dialog_ing_sel.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Navn"
-            android:inputType="textPersonName"
+            android:inputType="textCapSentences"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
