--- a/app/src/main/res/layout/item_dialog_ing_sel.xml
+++ b/app/src/main/res/layout/item_dialog_ing_sel.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:ellipsize="end"
         android:maxLines="2"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
