--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -64,6 +64,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_list_price" />
 
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/ingredient_selection_list"
+        app:layout_constraintEnd_toEndOf="@+id/ingredient_selection_list"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/ingredient_selection_list" />
+
     <TextView
         android:id="@+id/recipe_list_price"
         android:layout_width="wrap_content"
@@ -90,12 +100,12 @@
         android:id="@+id/ingredient_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="Ingrediensgrupper"
-        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#000000"
         android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/ingredient_selection_list"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
@@ -105,12 +115,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="15dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ingredient_list_title"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         tools:listitem="@layout/item_ingredient_in_recipe">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -165,6 +176,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/recipe_list_price"
         app:srcCompat="@drawable/shopping_cart_24px_outlined" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="10dp"
+        android:text="Butik"
+        app:layout_constraintEnd_toEndOf="@+id/ingredient_selection_list"
+        app:layout_constraintTop_toBottomOf="@+id/ingredient_list_title" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="Pris"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mængde"
+        app:layout_constraintEnd_toEndOf="@+id/ingredient_selection_list"
+        app:layout_constraintStart_toStartOf="@+id/ingredient_selection_list"
+        app:layout_constraintTop_toTopOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="38dp"
+        android:text="Navn"
+        app:layout_constraintStart_toStartOf="@+id/ingredient_selection_list"
+        app:layout_constraintTop_toTopOf="@+id/textView8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
