--- a/app/src/main/res/layout/dialog_create_recipe.xml
+++ b/app/src/main/res/layout/dialog_create_recipe.xml
@@ -37,6 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_new_recipe_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Indtast opskriftnavn " />
@@ -51,10 +52,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputRecipeTitle">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_new_recipe_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:hint="Indtast tilberedningstid" />
+            android:hint="Indtast tilberedningstid"
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
