--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -24,13 +24,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipe_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_text" />
+        app:layout_constraintTop_toBottomOf="@+id/search_text"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/search_text"
@@ -51,13 +53,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="15dp"
         android:clickable="true"
         app:backgroundTint="@color/colorPrimary"
-        app:tint="@color/colorWhite"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/recipe_list"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/add_24px" />
+        app:srcCompat="@drawable/add_24px"
+        app:tint="@color/colorWhite" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
