--- a/app/src/main/res/layout/activity_create_ingsel.xml
+++ b/app/src/main/res/layout/activity_create_ingsel.xml
@@ -8,6 +8,30 @@
     android:weightSum="1.0"
     android:id="@+id/constraintLayout">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tilføj Ingrediens"
+        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+        app:layout_constraintEnd_toEndOf="@+id/toolbar"
+        app:layout_constraintStart_toStartOf="@+id/toolbar"
+        app:layout_constraintTop_toTopOf="@+id/toolbar" />
+
     <EditText
         android:id="@+id/ingsel_name"
         android:layout_width="0dp"
@@ -18,7 +42,7 @@
         android:inputType="textCapSentences"
         app:layout_constraintEnd_toEndOf="@+id/tv_info1"
         app:layout_constraintStart_toStartOf="@+id/tv_info1"
-        app:layout_constraintTop_toBottomOf="@+id/tv_info1"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_conversion_absoluteHeight="45dp"
         tools:layout_conversion_absoluteWidth="210dp" />
 
@@ -81,7 +105,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Indtast et navn til din ingrediensgruppe, og tilføj de varer du ønsker at sammenligne priser for"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
